...
      showsVerticalScrollIndicator={false}
      ItemSeparatorComponent={() => <View style={styles.characterSeparator} />}
      ListHeaderComponent={listHeader}
      ListEmptyComponent={listEmpty}
      ListFooterComponent={
        <View style={styles.createCharacterButtonContainer}>
          <VioletButton title={t('room.createCharacter')} onPress={onCreateCharacter} disabled={isCreateBlocked} testID="create-character-button" />
        </View>
      }
      removeClippedSubviews
    />
  );
});
...
