...
      style={styles.safeArea}
      edges={Platform.OS === 'ios' ? [] : ['top', 'bottom', 'left', 'right']}
    >
      <Stack.Screen options={{ title: t(isSecondEdition ? 'gameRules.secondEditionScreenTitle' : 'gameRules.screenTitle') }} />

      <ScrollView
        testID="munchkin-rules-scroll"
        contentContainerStyle={styles.content}
        showsVerticalScrollIndicator
      >
        <Text accessibilityRole="header" aria-level={1} style={styles.title}>
          {t(isSecondEdition ? 'gameRules.secondEditionTitle' : 'gameRules.title')}
        </Text>
...
