appId: click.helpamunch.mobileapp
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: screenshot-open-rooms
    timeout: 20000
- tapOn:
    id: screenshot-open-rooms
- tapOn:
    id: create-room-button
- tapOn:
    id: confirm-create-room-button
- runFlow:
    when:
      platform: Web
    commands:
      - extendedWaitUntil:
          visible:
            id: Open rules
          timeout: 20000
      - tapOn:
          id: Open rules
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            id: open-room-rules
          timeout: 20000
      - tapOn:
          id: open-room-rules
- runFlow:
    when:
      platform: Android
    commands:
      - extendedWaitUntil:
          visible:
            id: open-room-rules
          timeout: 20000
      - tapOn:
          id: open-room-rules
- extendedWaitUntil:
    visible:
      id: munchkin-rules-scroll
    timeout: 10000
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: "6%, 9%"
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: Web
    commands:
      - back
- runFlow:
    when:
      platform: Web
    commands:
      - assertVisible:
          id: Open rules
- runFlow:
    when:
      platform: iOS
    commands:
      - assertVisible:
          id: open-room-rules
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: open-room-rules
