appId: click.helpamunch.mobileapp
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      text: "screenshot-open-rooms"
    timeout: 10000
- tapOn:
    text: "screenshot-open-rooms"
- extendedWaitUntil:
    visible:
      id: "screenshot-open-room-join"
    timeout: 10000
- tapOn:
    id: "screenshot-open-room-join"
- tapOn:
    text: "screenshot-room-id-input"
- inputText: ${ROOM_ID}
- tapOn:
    text: "screenshot-confirm-room-join"
- extendedWaitUntil:
    visible: "Rune Rider"
    timeout: 20000
- assertVisible: "Bardic Bryn"
- assertVisible: "Hexley Fox"
