appId: click.helpamunch.mobileapp
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "http://.*:8081"
    commands:
      - tapOn:
          text: "http://.*:8081"
      - tapOn: Continue
      - tapOn: Close
- extendedWaitUntil:
    visible:
      id: screenshot-open-rooms
    timeout: 30000
- tapOn:
    id: screenshot-open-rooms
- tapOn:
    id: screenshot-open-room-join
- tapOn:
    id: screenshot-room-id-input
- inputText: ${ROOM_ID}
- tapOn:
    id: screenshot-confirm-room-join
- extendedWaitUntil:
    visible:
      id: create-character-button
    timeout: 20000
