appId: click.helpamunch.mobileapp
---
- runFlow: create-character.yaml
- tapOn:
    id: change-character-button
- extendedWaitUntil:
    visible:
      id: change-character-modal
    timeout: 10000
- runFlow:
    when:
      platform: Web
    commands:
      - repeat:
          times: 3
          commands:
            - swipe:
                start: 50%, 70%
                end: 50%, 35%
- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element:
            id: delete-character-button
          direction: DOWN
          timeout: 20000
- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element:
            id: delete-character-button
          direction: DOWN
          timeout: 20000
- assertVisible:
    id: delete-character-button
- assertVisible:
    id: save-character-button
- assertVisible:
    id: cancel-character-button
- runFlow:
    when:
      platform: Web
    commands:
      - tapOn:
          id: delete-character-button
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible:
            id: confirm-dialog-confirm
          timeout: 5000
      - tapOn:
          id: confirm-dialog-confirm
      - extendedWaitUntil:
          notVisible: E2E Created
          timeout: 20000
